# crewai-virtual-psychiatrist

./: .all-contributorsrc  .gitignore  README.md  package-lock.json  render.yaml
Backend/: .env.example  app.py  pyproject.toml  requirements.txt  start.py  student_support_plan.md  test_mongodb.py
Backend/src/assignment/: crew.py  main.py
Backend/src/assignment/config/: agents.yaml  tasks.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AuthForm.jsx  AuthForm.module.css  Bot.jsx  ChatBot.jsx  EmotionalAnalytics.jsx  History.jsx  Home.jsx  NavBar.jsx  NotFound.jsx  Profile.jsx  test.jsx
