[project]
name = "assignment"
version = "0.1.0"
description = "assignment using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
assignment = "assignment.main:run"
run_crew = "assignment.main:run"
train = "assignment.main:train"
replay = "assignment.main:replay"
test = "assignment.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
